; ModuleID = '/home/carl/AnghaBench/8cc/extr_lex.c_read_hash_digraph.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_lex.c_read_hash_digraph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KHASHHASH = common dso_local global i8 0, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @read_hash_digraph to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_hash_digraph() #0 {
  %1 = alloca i32*, align 8
  %2 = call i64 @next(i8 signext 62)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32* @make_keyword(i8 signext 125)
  store i32* %5, i32** %1, align 8
  br label %23

6:                                                ; preds = %0
  %7 = call i64 @next(i8 signext 58)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %22

9:                                                ; preds = %6
  %10 = call i64 @next(i8 signext 37)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %20

12:                                               ; preds = %9
  %13 = call i64 @next(i8 signext 58)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %12
  %16 = load i8, i8* @KHASHHASH, align 1
  %17 = call i32* @make_keyword(i8 signext %16)
  store i32* %17, i32** %1, align 8
  br label %23

18:                                               ; preds = %12
  %19 = call i32 @unreadc(i8 signext 37)
  br label %20

20:                                               ; preds = %18, %9
  %21 = call i32* @make_keyword(i8 signext 35)
  store i32* %21, i32** %1, align 8
  br label %23

22:                                               ; preds = %6
  store i32* null, i32** %1, align 8
  br label %23

23:                                               ; preds = %22, %20, %15, %4
  %24 = load i32*, i32** %1, align 8
  ret i32* %24
}

declare dso_local i64 @next(i8 signext) #1

declare dso_local i32* @make_keyword(i8 signext) #1

declare dso_local i32 @unreadc(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
